[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
html2md = "0.2.14"
lazy_static = "1.4.0"
rayon = "1.8.1"
reqwest = { version = "0.11.23", features = ["blocking", "cookies", "json"] }
scraper = "0.18.1"
serde = "1.0.195"
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
